<?xml version="1.0" encoding="utf-8"?>
<GridLayout
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity"
    android:id="@+id/addTask"
    android:padding="8dp"
    android:columnCount="2">
    <TextView
        android:layout_row="0"
        android:layout_column="0"
        android:textSize="32dp"
        android:text="@string/add_a_task"
        android:layout_columnSpan="2"/>

    <TextView
        android:id="@+id/task_sub"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/subject"
        android:textStyle="bold"
        android:textSize="18dp"
        android:gravity="center"
        android:layout_columnWeight="20"/>
    <EditText
        android:layout_width="120dp"
        android:id="@+id/task_subET"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnWeight="80"
        android:inputType="text"
        android:gravity="center"
        android:singleLine="true"
        />

    <TextView
        android:id="@+id/task_note"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/note"
        android:textStyle="bold"
        android:textSize="18dp"
        android:gravity="center"
        android:layout_columnWeight="20"/>
    <EditText
        android:id="@+id/task_noteET"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_width="120dp"
        android:layout_columnWeight="80"
        android:inputType="text"
        android:gravity="center"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/task_date"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/date"
        android:textStyle="bold"
        android:textSize="18dp"
        android:gravity="center"
        android:layout_columnWeight="20"/>
    <Button
        android:id="@+id/task_dateButton"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_columnWeight="80"
        android:textColor="@color/black"
        android:text="@string/set_date"
        android:gravity="center"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    <TextView
        android:layout_row="4"
        android:layout_column="0"
        android:gravity="center"
        android:text="@string/repeating_schedule"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_columnWeight="80"/>

    <Spinner
        android:id="@+id/schedule_spinner"
        android:layout_width="100dp"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_gravity="end"
        android:gravity="center"
        android:layout_columnWeight="80"
        android:entries="@array/Days"
        android:padding="1dp"
        android:visibility="gone"/>

        <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/schedule_switch"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_gravity="start"
        android:layout_columnWeight="80"
        android:layout_width="48dp"/>

    <TextView
        android:layout_row="5"
        android:layout_column="0"
        android:gravity="center"
        android:text="@string/remainder"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_columnWeight="80"/>
    <ImageView
        android:layout_height="24dp"
        android:layout_width="24dp"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_gravity="end|center_vertical"
        android:src="@drawable/ic_bell"
        android:layout_columnWeight="80"/>
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/task_switch"
        android:layout_row="5"
        android:layout_column="1"
        android:layout_gravity="start"
        android:layout_columnWeight="80"/>


    <TextView
        android:id="@+id/task_remdate"
        android:layout_row="6"
        android:layout_column="0"
        android:text="@string/remainderdate"
        android:textStyle="bold"
        android:textSize="18dp"
        android:gravity="center"
        android:layout_columnWeight="20"
        android:visibility="gone"/>
    <Button
        android:id="@+id/task_remdateButton"
        android:layout_row="6"
        android:layout_column="1"
        android:layout_columnWeight="80"
        android:text="@string/set_date"
        android:textColor="@color/black"
        android:gravity="center"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/task_remtime"
        android:layout_row="7"
        android:layout_column="0"
        android:text="@string/remainder_time"
        android:textStyle="bold"
        android:textSize="18dp"
        android:gravity="center"
        android:layout_columnWeight="20"
        android:visibility="gone"/>
    <Button
        android:id="@+id/task_remtimeButton"
        android:layout_row="7"
        android:layout_column="1"
        android:layout_columnWeight="80"
        android:textColor="@color/black"
        android:text="@string/set_time"
        android:gravity="center"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:visibility="gone"/>
    <Button
        android:id="@+id/save_task"
        android:layout_row="9"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_rowSpan="2"
        android:layout_gravity="fill_horizontal"
        android:gravity="center_horizontal"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/save_task"
        android:textSize="18dp"
        app:strokeColor="#673AB7"/>

</GridLayout>